--- a/Code/client/package.json
+++ b/Code/client/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "elementice-bulletkam_server",
+  "name": "elementice-bulletkam_client",
   "version": "1.0.0",
-  "description": "The server backend which handles receiving images from the Raspberry Pis",
-  "main": "server.js",
+  "description": "The client which runs on a Raspberry Pi to deliver images to the server via POST request",
+  "main": "client.js",
   "scripts": {
+    "start": "node client.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
