--- a/Code/server/package.json
+++ b/Code/server/package.json
@@ -4,6 +4,7 @@
   "description": "The server backend which handles receiving images from the Raspberry Pis",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
