--- a/Code/client/package.json
+++ b/Code/client/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.3",
     "file-system": "^2.2.2",
-    "request": "^2.88.0"
+    "onoff": "^3.2.1"
   }
 }
