--- a/Code/server/package.json
+++ b/Code/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "multer": "^1.3.1"
+    "multer": "^1.3.1",
+    "request": "^2.88.0"
   }
 }
